# pretty-sparkles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  analysis.txt  compile.sh  dielectric_breakdown.cpp  imgui.ini  main.cpp  report4.txt  setup.sh
Shaders/: fragmentShader.glsl  vertexShader.glsl
include/: CircularShape.hpp  ClusterDBM.hpp  Shader.hpp  SolverDBM.hpp  Texture.hpp
include/glad/: glad.h
src/: CircularShape.cpp  ClusterDBM.cpp  Shader.cpp  SolverDBM.cpp  benchmark.cpp  dielectric_breakdown.cpp  glad.c  main.cpp
